reset server.toml

--- a/server.toml
+++ b/server.toml
@@ -1,16 +1,14 @@
-announce = false
-description = 'test'
-website = 'test.com'
-gamemode = 'Freeroam'
-language = 'en'
-modules = ['js-module-v2']
-name = 'My Cool alt:V Server Built Vue3 and TailwindCSS'
-players = 32
+name = 'alt:V Server'
 port = 7788
-tags = []
-resources = [
-    'core',
-    'example',
-]
+players = 5
+announce = false
+gamemode = 'Freeroam'
+website = 'example.com'
+language = 'en'
+description = 'alt:V Sample Server'
+modules = ['js-module-v2']
 debug = true
-host = '0.0.0.0'
+resources = [
+  'core',
+  'example'
+]
